[metadata]
name = powermateusb
version = 0.0.4
description = Cross-platform library for Griffin PowerMate
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sparkyb/powermate
author = Ben Buchwald
author_email = ben@ngcreative.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Human Interface Device (HID)
license = MIT
license_file = LICENSE.txt

[options]
packages = find:
include_package_data = True
install_requires =
    evdev>=1.4.0; platform_system=="Linux"
    pywinusb~=0.4.2; platform_system=="Windows"
python_requires = >=3.6
